--- a/css/abstracts/_variables.scss
+++ b/css/abstracts/_variables.scss
@@ -1,6 +1,22 @@
+//colors
 $color-grey-light: #f2f2f2;
+
+$color-white: #ffffff;
 $color-grey: #828282;
 
 $color-black: #4f4f4f;
 
 $color-blue: #2f80ed;
+
+
+//fonts
+
+$default-font-size: 1.6rem;
+
+$font-sm: 1.8rem;
+$font-lg: 2.4rem;
+
+
+//margins
+
+$sections-margin: 4.8rem;
