--- a/css/base/_base.scss
+++ b/css/base/_base.scss
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,500;0,600;0,700;0,800;0,900;1,400;1,500&display=swap');
+
+
 *,
 *::after,
 *::before {
@@ -12,5 +15,19 @@ html {
 
 body {
   box-sizing: border-box;
+  background-color: $color-grey-light;
+  padding: 6.5rem;
+  font-family: 'Montserrat', sans-serif;
+  color: $color-black;
 }
 
+.container {
+  margin: 0 auto;
+}
+.section {
+  background-color: $color-white;
+  border-radius: 12px;
+  padding: 2.5rem;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px,
+    rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
+}
