--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,500;0,600;0,700;0,800;0,900;1,400;1,500&display=swap");
 *,
 *::after,
 *::before {
@@ -14,5 +15,259 @@ html {
 body {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+  background-color: #f2f2f2;
+  padding: 6.5rem;
+  font-family: 'Montserrat', sans-serif;
+  color: #4f4f4f;
+}
+
+.container {
+  margin: 0 auto;
+}
+
+.section {
+  background-color: #ffffff;
+  border-radius: 12px;
+  padding: 2.5rem;
+  -webkit-box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
+          box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
+}
+
+.profile {
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 2;
+  -ms-grid-column: 1;
+  grid-area: profile;
+}
+
+.skills {
+  -ms-grid-row: 1;
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 3;
+  grid-area: skills;
+}
+
+.projects {
+  -ms-grid-row: 2;
+  -ms-grid-row-span: 2;
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 3;
+  grid-area: projects;
+}
+
+.experiences {
+  -ms-grid-row: 3;
+  -ms-grid-column: 1;
+  grid-area: exp;
+}
+
+.hobbies {
+  -ms-grid-row: 4;
+  -ms-grid-column: 1;
+  grid-area: hobbies;
+}
+
+.blogs {
+  -ms-grid-row: 4;
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 3;
+  grid-area: blogs;
+}
+
+.container {
+  display: -ms-grid;
+  display: grid;
+  height: 100vh;
+  -ms-grid-rows: auto auto auto auto auto auto;
+      grid-template-rows: auto auto auto auto auto auto;
+  grid-gap: 32px;
+      grid-template-areas: "profile skills skills skills" "profile projects projects projects" "exp projects projects projects" "hobbies blogs blogs blogs";
+}
+
+.m-bottom-sm {
+  margin-bottom: 3.2rem;
+}
+
+.text-dark {
+  font-weight: 600;
+  color: #4f4f4f;
+}
+
+.text-light {
+  font-weight: 500;
+  color: #828282;
+}
+
+.heading-text {
+  font-size: 2.4rem;
+  line-height: 2.9rem;
+}
+
+.sub-text {
+  font-size: 1.8rem;
+  line-height: 2.2rem;
+}
+
+.profile {
+  max-width: 413px;
+}
+
+.profile__image {
+  display: inline-block;
+  max-width: 366.99px;
+  height: 358.63px;
+  border-radius: 12px;
+}
+
+.profile__image .profile-pic {
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 100%;
+  border-radius: 12px;
+  height: 100%;
+}
+
+.contact-detail {
+  font-size: 1.8rem;
+}
+
+.contact-detail .email, .contact-detail .phone {
+  line-height: 2.4rem;
+}
+
+.contact-detail .font-icon {
+  margin-right: 1.8rem;
+}
+
+.profile-info-text {
+  font-size: 1.8rem;
+}
+
+.skills {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.skills__frontend, .skills__others {
+  max-width: 415.02px;
+  display: inline-block;
+  margin-bottom: 4.8rem;
+}
+
+.skills__frontend h1, .skills__others h1 {
+  margin-bottom: 2.7rem;
+}
+
+.skills-details {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.skills-list {
+  line-height: 19.7px;
+}
+
+.skills-list li {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  list-style-type: none;
+  font-size: 1.8rem;
+  margin-bottom: 2.7rem;
+}
+
+.skills-list li:last-child {
+  margin-bottom: 0;
+}
+
+.skills-list h2 {
+  font-size: 1.8rem;
+  width: 120px;
+}
+
+.bar {
+  display: block;
+  width: 236.85px;
+  height: 9.6px;
+  background: #f2f2f2;
+  border-radius: 12px;
+}
+
+.bar span {
+  height: 9.6px;
+  background: #2f80ed;
+  float: left;
+  border-radius: 12px;
+}
+
+.html {
+  width: 80%;
+  -webkit-animation: html 2s;
+          animation: html 2s;
+}
+
+.css {
+  width: 80%;
+}
+
+.js {
+  width: 40%;
+}
+
+.bootstrap {
+  width: 70%;
+}
+
+.sass {
+  width: 50%;
+}
+
+.figma {
+  width: 40%;
+}
+
+.python {
+  width: 80%;
+}
+
+.java {
+  width: 50%;
+}
+
+.django {
+  width: 70%;
+}
+
+.sql {
+  width: 80%;
+}
+
+.experiences {
+  max-width: 413px;
+  height: 692.17px;
+}
+
+.hobbies {
+  max-width: 413px;
+  height: 692.17px;
 }
 /*# sourceMappingURL=main.css.map */
