--- a/css/main.scss
+++ b/css/main.scss
@@ -1,12 +1,20 @@
+@import "abstracts/variables";
+
 @import "base/base";
-@import "base/animations";
+@import "base/animation";
 @import "base/typography";
 @import "base/utilities";
 
+@import "components/profile";
+@import "components/skills";
+@import "components/experiences";
+@import "components/projects";
+@import "components/hobbies";
+@import "components/blogs";
 
 @import "abstracts/functions";
 @import "abstracts/mixins";
-@import "abstracts/variables";
+
 
 
 @import "pages/home";
