--- a/css/components/_hobbies.scss
+++ b/css/components/_hobbies.scss
@@ -1,4 +1,26 @@
-.hobbies{
-    max-width: 413px;
-height: 692.17px;
+.hobbies {
+  max-width: 413px;
+}
+
+.hobby {
+  &__image {
+    width: 369px;
+    height: 139px;
+    img{
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        border-radius: 12px;
+
+    }
+  }
+  &__name{
+      font-size: $font-sm;
+  }
+  &__desc{
+      font-size: $default-font-size;
+  }
+  &:last-child{
+      margin-bottom: 0;
+  }
 }
