--- a/css/base/_typography.scss
+++ b/css/base/_typography.scss
@@ -1,35 +1,48 @@
 
-.profile{
-    grid-area: profile;
-}
+// .profile{
+//     grid-area: profile;
+// }
 
-.skills{
-    grid-area: skills;
-}
-.projects{
-    grid-area: projects;
-}
+// .skills{
+//     grid-area: skills;
+// }
+// .projects{
+//     grid-area: projects;
+// }
 
-.experiences{
-    grid-area: exp;
-}
-.hobbies{
-    grid-area: hobbies;
-}
-.blogs{
-    grid-area: blogs;
-}
+// .experiences{
+//     grid-area: exp;
+// }
+// .hobbies{
+//     grid-area: hobbies;
+// }
+// .blogs{
+//     grid-area: blogs;
+// }
+
+// .container{
+//     display: grid;
+//     margin: 0 auto;
+//     grid-template-rows: auto auto auto auto auto ;
+//     grid-gap: 32px;
+//     grid-template-areas:
+//     "profile skills skills skills"
+//     "profile projects projects projects"
+//     "exp projects projects projects"
+//     "hobbies projects projects projects"
+//     "hobbies blogs blogs blogs"
+//     ;
+// }
+
 
 .container{
-    display: grid;
+    max-width: 1300px;
     margin: 0 auto;
-    grid-template-rows: auto auto auto auto auto ;
-    grid-gap: 32px;
-    grid-template-areas:
-    "profile skills skills skills"
-    "profile projects projects projects"
-    "exp projects projects projects"
-    "hobbies projects projects projects"
-    "hobbies blogs blogs blogs"
-    ;
+    display: flex;
+    justify-content: space-between;
+}
+
+.container-right{
+    max-width:  862px;
+    margin-left: 3.2rem;
 }
