--- a/css/components/_blogs.scss
+++ b/css/components/_blogs.scss
@@ -1,42 +1,51 @@
 .blogs {
- 
+  overflow: hidden;
   &__head {
     font-size: $font-sm;
+
   }
 }
 
-.blog-tag{
-    font-size: $default-font-size;
-    color: $color-grey-light;
+.blog-tag {
+  font-size: $default-font-size;
+  color: $color-grey-light;
 }
 
 .blog {
-    display: flex;
-    justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
 
-   
-    &__image {
-      max-width: 444px;
-      max-height: 369px;
-      img {
-        width: 100%;
-        height: 100%;
-      }
+
+  &__image {
+    max-width: 444px;
+    max-height: 369px;
+
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      transform: translateX(3.2rem);
+      border-radius: 12px;
+    
     }
   }
-  .blog-details {
-    max-width: 325px;
-    &__title{
-        font-size: $font-lg;
-        max-width: 167px;
-        line-height: 29.26px;
-    }
-    &__desc{
-        font-size: $default-font-size;
-    }
-    &__link{
-        color: $color-blue ;
-        font-size: $default-font-size;
-        text-decoration: none;
-    }
 }
+.blog-details {
+  max-width: 325px;
+  &__title {
+    font-size: $font-lg;
+    max-width: 167px;
+    line-height: 29.26px;
+  }
+  &__desc {
+    font-size: $default-font-size;
+    min-width: 250px;
+  }
+  &__link {
+    color: $color-blue;
+    font-size: $default-font-size;
+    text-decoration: none;
+  }
+}
+
+
