--- a/css/components/_hobbies.scss
+++ b/css/components/_hobbies.scss
@@ -4,7 +4,7 @@
 
 .hobby {
   &__image {
-    width: 369px;
+  
     height: 139px;
     img{
         width: 100%;
@@ -23,4 +23,14 @@
   &:last-child{
       margin-bottom: 0;
   }
+}
+
+
+@media (max-width:920px){
+  .hobbies {
+    max-width: 290px;
+  
+  
+  }
+  
 }
