--- a/css/components/_projects.scss
+++ b/css/components/_projects.scss
@@ -1,6 +1,9 @@
 .projects {
   .project {
     display: flex;
+    &:last-child{
+      margin-bottom: 4.8rem;
+    }
   }
   .projects__head{
       font-size: $font-sm;
@@ -8,8 +11,8 @@
 }
 
 .project__image {
-  width: 322px;
-  height: 269px;
+  max-width: 362px;
+  max-height: 269px;
   img {
     width: 100%;
     height: 100%;
@@ -19,7 +22,7 @@
 }
 
 .project__desc {
-  max-width: 470px;
+ 
   margin-left: 3.2rem;
   .tags, p{
     font-size: $default-font-size;
@@ -31,7 +34,7 @@
     margin-top: 5rem;
     font-size: $font-sm;
     a{
-        padding: 11px 38px;
+        padding: 1.1rem 3.8rem;
         border-radius: 12px;
         border: 1px solid $color-blue;
         text-decoration: none;
@@ -46,3 +49,38 @@
     }
    
 }
+
+@media (max-width: 1160px){
+  .project__image {
+    max-height: 200px;
+  }
+}
+
+@media (max-width: 920px){
+  .project__image {
+    max-height: 150px;
+  }
+}
+
+// @media (max-width:800px){
+//   .projects{
+//     .project{
+//       flex-direction: column;
+//       align-items: center;
+//     }
+//   }
+//   .project__image {
+//     max-height: none;
+//     height: auto;
+//     img {
+//       min-width: 100px;
+//     }
+   
+//     margin-bottom: 1.8rem;
+//   }
+//   .project__desc {
+//     max-width: 100%;
+//     margin-left:0;
+//   }
+  
+// }
