--- a/css/base/_base.scss
+++ b/css/base/_base.scss
@@ -1,5 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,500;0,600;0,700;0,800;0,900;1,400;1,500&display=swap');
-
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,500;0,600;0,700;0,800;0,900;1,400;1,500&display=swap");
 
 *,
 *::after,
@@ -17,23 +16,21 @@ body {
   box-sizing: border-box;
   background-color: $color-grey-light;
   padding: 6.5rem;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   color: $color-black;
-  min-width: 700px;
+  min-width: 830px;
 }
 
-@media (max-width:1160px){
-  html {
-    //This defines what 1 rem is
-    font-size: 8px;
-  }
-}
+// @media (max-width: 1160px) {
+//   html {
+//     //This defines what 1 rem is
+//     font-size: 8px;
+//   }
+// }
 
-@media (max-width:920px){
- 
+@media (max-width: 920px) {
   body {
     padding: 4.5rem;
-    
-  }
-}
 
+}
+}
