--- a/css/main.css
+++ b/css/main.css
@@ -17,15 +17,9 @@ body {
           box-sizing: border-box;
   background-color: #f2f2f2;
   padding: 6.5rem;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   color: #4f4f4f;
-  min-width: 700px;
-}
-
-@media (max-width: 1160px) {
-  html {
-    font-size: 8px;
-  }
+  min-width: 830px;
 }
 
 @media (max-width: 920px) {
@@ -440,18 +434,6 @@ body {
           animation: sql 2s;
 }
 
-@media (max-width: 1160px) {
-  .skills-list h2 {
-    width: 90px;
-  }
-}
-
-@media (max-width: 920px) {
-  .skills-list h2 {
-    width: 65px;
-  }
-}
-
 .experiences {
   max-width: 413px;
 }
@@ -582,6 +564,30 @@ body {
 @media (max-width: 920px) {
   .project__image {
     max-height: 150px;
+  }
+}
+
+@media (max-width: 1160px) {
+  .projects .project {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .project__image {
+    max-height: none;
+    height: auto;
+    margin-bottom: 1.8rem;
+  }
+  .project__image img {
+    min-width: 100px;
+  }
+  .project__desc {
+    max-width: 100%;
+    margin-left: 0;
   }
 }
 
