--- a/css/pages/_home.scss
+++ b/css/pages/_home.scss
@@ -5,3 +5,19 @@
     box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px,
       rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
   }
+
+  footer {
+    font-family: "Montserrat", sans-serif;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 17px;
+    text-align: center;
+    color: #b9bdcf;
+    margin-bottom: 10px;
+  }
+  footer a {
+    text-decoration: underline;
+    color: #828282;
+  }
+  
